Handle no argument.

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,13 +1,18 @@
-Color log
-=============
+= `colorlog` - Coloring logs in red/yellow/green based on regexp
+
+Author::  Nicolas Hurion
+Copyright::  Copyright (c) 2012 by Nicolas Hurion
+License:: Distribute under the Apache License
+
+== Color log
 
 Color log is a simple tool that will take a file and display it, with some lines colored in red, yellow or green,
 based on some regular expression.
 
 Default behavior will show in:
- * green lines containing "success"
- * yellow lines containing "warning"
- * red lines containing "error" or "failure" and not containing "tests"
+* green lines containing "success"
+* yellow lines containing "warning"
+* red lines containing "error" or "failure" and not containing "tests"
 
 My initial need when I created this small tool was to spot warnings in the middle of all the output of maven.
 
@@ -15,10 +20,9 @@ Example usage:
 
     mvn clean install | colorlog
     
-Windows
--------
+== Windows
 
-Install [ruby](http://rubyinstaller.org/)
+Install {ruby}[http://rubyinstaller.org/]
 
 Once installed
 
