--- a/README.rdoc
+++ b/README.rdoc
@@ -6,7 +6,7 @@ License:: Distribute under the Apache License
 
 == Color log
 
-Color log is a simple tool that will take a file and display it, with some lines colored in red, yellow or green,
+Color log is a simple tool that will take a file and display it, with some lines colored in three different colors,
 based on some regular expression.
 
 Default behavior will show in:
@@ -34,4 +34,7 @@ Or on windows
 You can then use
 
     mvn clean install | colorlog
-    
+
+See help for usage
+
+    colorlog --help
